--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <body>
     <div class="wrapper">
       <div class="recipe-container">
+        <img
+          class="recipe-img"
+          src="../assets/images/image-omelette.jpeg"
+          alt=""
+        />
         <h1>Simple Omelette Recipe</h1>
         <p>
           An easy and quick dish, perfect for any meal. This classic omelette
