--- a/index.html
+++ b/index.html
@@ -23,63 +23,75 @@
           src="../assets/images/image-omelette.jpeg"
           alt=""
         />
-        <h1>Simple Omelette Recipe</h1>
-        <p>
+        <h1 class="recipe-name">Simple Omelette Recipe</h1>
+        <p class="intro-para">
           An easy and quick dish, perfect for any meal. This classic omelette
           combines beaten eggs cooked to perfection, optionally filled with your
           choice of cheese, vegetables, or meats.
         </p>
-        <h2>Preparation time</h2>
-
-        <ul>
-          <li>Total: Approximately 10 minutes</li>
-          <li>Preparation: 5 minutes</li>
-          <li>Cooking: 5 minutes</li>
-        </ul>
-        <h3>Ingredients</h3>
-        <ul>
-          <li>2-3 large eggs</li>
-          <li>Salt, to taste</li>
-          <li>Pepper, to taste</li>
-          <li>1 tablespoon of butter or oil</li>
-          <li>
-            Optional fillings: cheese, diced vegetables, cooked meats, herbs
-          </li>
-        </ul>
-
-        <h3>Instructions</h3>
-        <ol>
-          <li>
-            Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
-            pepper until they are well mixed. You can add a tablespoon of water
-            or milk for a fluffier texture.
-          </li>
-          <li>
-            Heat the pan: Place a non-stick frying pan over medium heat and add
-            butter or oil.
-          </li>
-          <li>
-            Cook the omelette: Once the butter is melted and bubbling, pour in
-            the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
-          </li>
-          <li>
-            Add fillings (optional): When the eggs begin to set at the edges but
-            are still slightly runny in the middle, sprinkle your chosen
-            fillings over one half of the omelette.
-          </li>
-          <li>
-            Fold and serve: As the omelette continues to cook, carefully lift
-            one edge and fold it over the fillings. Let it cook for another
-            minute, then slide it onto a plate.
-          </li>
-          <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
-        </ol>
-        <h3>Nutrition</h3>
-        <p>
+        <div class="prep-container">
+          <h2 class="prep-heading">Preparation time</h2>
+          <ul class="prep-list">
+            <li>
+              <span class="bold-text">Total:</span> Approximately 10 minutes
+            </li>
+            <li><span class="bold-text">Preparation:</span> 5 minutes</li>
+            <li><span class="bold-text">Cooking:</span> 5 minutes</li>
+          </ul>
+        </div>
+        <div class="ingredients">
+          <h3 class="list-heading">Ingredients</h3>
+          <ul class="ingredients-list">
+            <li class="ingredient">2-3 large eggs</li>
+            <li class="ingredient">Salt, to taste</li>
+            <li class="ingredient">Pepper, to taste</li>
+            <li class="ingredient">1 tablespoon of butter or oil</li>
+            <li class="ingredient">
+              Optional fillings: cheese, diced vegetables, cooked meats, herbs
+            </li>
+          </ul>
+        </div>
+        <div class="instructions">
+          <h3 class="list-heading">Instructions</h3>
+          <ol class="instructions-list">
+            <li class="instruction">
+              <span class="bold-text"> Beat the eggs:</span> In a bowl, beat the
+              eggs with a pinch of salt and pepper until they are well mixed.
+              You can add a tablespoon of water or milk for a fluffier texture.
+            </li>
+            <li class="instruction">
+              <span class="bold-text"> Heat the pan:</span> Place a non-stick
+              frying pan over medium heat and add butter or oil.
+            </li>
+            <li class="instruction">
+              <span class="bold-text"> Cook the omelette:</span> Once the butter
+              is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+              the eggs evenly coat the surface.
+            </li>
+            <li class="instruction">
+              <span class="bold-text">Add fillings (optional):</span> When the
+              eggs begin to set at the edges but are still slightly runny in the
+              middle, sprinkle your chosen fillings over one half of the
+              omelette.
+            </li>
+            <li class="instruction">
+              <span class="bold-text"> Fold and serve:</span> As the omelette
+              continues to cook, carefully lift one edge and fold it over the
+              fillings. Let it cook for another minute, then slide it onto a
+              plate.
+            </li>
+            <li class="instruction">
+              <span class="bold-text"> Enjoy:</span> Serve hot, with additional
+              salt and pepper if needed.
+            </li>
+          </ol>
+        </div>
+        <h3 class="nutrition-heading">Nutrition</h3>
+        <p class="nutrition-para">
           The table below shows nutritional values per serving without the
           additional fillings.
         </p>
-        <table>
+        <table class="nutrition-table">
           <tr>
             <th>Calories</th>
             <td>277kcal</td>
@@ -93,8 +105,8 @@
             <td>20g</td>
           </tr>
           <tr>
-            <th>Fat</th>
-            <td>22g</td>
+            <th class="bottom-row">Fat</th>
+            <td class="bottom-row">22g</td>
           </tr>
         </table>
       </div>
