--- a/index.html
+++ b/index.html
@@ -86,29 +86,31 @@
             </li>
           </ol>
         </div>
-        <h3 class="nutrition-heading">Nutrition</h3>
-        <p class="nutrition-para">
-          The table below shows nutritional values per serving without the
-          additional fillings.
-        </p>
-        <table class="nutrition-table">
-          <tr>
-            <th>Calories</th>
-            <td>277kcal</td>
-          </tr>
-          <tr>
-            <th>Carbs</th>
-            <td>0g</td>
-          </tr>
-          <tr>
-            <th>Protein</th>
-            <td>20g</td>
-          </tr>
-          <tr>
-            <th class="bottom-row">Fat</th>
-            <td class="bottom-row">22g</td>
-          </tr>
-        </table>
+        <div class="nutrition">
+          <h3 class="nutrition-heading">Nutrition</h3>
+          <p class="nutrition-para">
+            The table below shows nutritional values per serving without the
+            additional fillings.
+          </p>
+          <table class="nutrition-table">
+            <tr>
+              <th>Calories</th>
+              <td>277kcal</td>
+            </tr>
+            <tr>
+              <th>Carbs</th>
+              <td>0g</td>
+            </tr>
+            <tr>
+              <th>Protein</th>
+              <td>20g</td>
+            </tr>
+            <tr>
+              <th class="bottom-row">Fat</th>
+              <td class="bottom-row">22g</td>
+            </tr>
+          </table>
+        </div>
       </div>
       <div class="attribution">
         Challenge by
