Changed background color to match design.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Rhys Miller</a>.
+        >. Coded by
+        <a href="https://rhysmiller.dev/" target="_blank">Rhys Miller</a>.
       </div>
     </div>
   </body>
